--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
       - "8080:80"
     volumes:
       - ./app/webroot/files:/var/www/html/app/webroot/files
+      - ./app/webroot/img:/var/www/html/app/webroot/img
       - ./app/webroot/.htaccess:/var/www/html/app/webroot/.htaccess
+      - ./app/webroot/phpmy/config.inc.php:/var/www/html/app/webroot/phpmy/config.inc.php
       - ./app/tmp:/var/www/html/app/tmp
       - ./app/Config:/var/www/html/app/Config
     environment:
