--- a/env.example
+++ b/env.example
@@ -7,3 +7,7 @@ DB_PASSWORD=tyre_password
 
 # MySQL Root Password
 MYSQL_ROOT_PASSWORD=root_password
+
+# phpMyAdmin Basic Auth
+PHPMYADMIN_USER=admin
+PHPMYADMIN_PASSWORD=admin_password
