--- a/env.example
+++ b/env.example
@@ -11,3 +11,11 @@ MYSQL_ROOT_PASSWORD=root_password
 # phpMyAdmin Basic Auth
 PHPMYADMIN_USER=admin
 PHPMYADMIN_PASSWORD=admin_password
+
+# Application Environment (dev/prod)
+APP_ENV=dev
+
+# Allowed Domain for Production (leave empty for dev, set domain for prod)
+# Example: ALLOWED_DOMAIN=example.com
+# В продакшне будет автоматически сгенерирован SSL сертификат и настроен редирект HTTP -> HTTPS
+ALLOWED_DOMAIN=
