--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,17 +1,15 @@
-# По умолчанию используется dev окружение
-# Для продакшна используйте: docker-compose -f docker-compose.prod.yml
-# Подробнее: README-ENVIRONMENTS.md
-
 services:
   tyre-app-php:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: tyre-app-php
+    container_name: tyre-app-php-prod
     ports:
-      - "8080:80"
+      - "80:80"
+      - "443:443"
     volumes:
-      - tyre-app-files:/var/www/html/app/webroot/files
+      - tyre-app-files-prod:/var/www/html/app/webroot/files
+      - tyre-app-ssl-prod:/etc/apache2/ssl
       - ./app/webroot/.htaccess:/var/www/html/app/webroot/.htaccess
       - ./app/webroot/phpmy/config.inc.php:/var/www/html/app/webroot/phpmy/config.inc.php
       - ./app/webroot/phpmy/.htaccess:/var/www/html/app/webroot/phpmy/.htaccess
@@ -25,7 +23,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD:-tyre_password}
       - PHPMYADMIN_USER=${PHPMYADMIN_USER:-admin}
       - PHPMYADMIN_PASSWORD=${PHPMYADMIN_PASSWORD:-admin_password}
-      - APP_ENV=${APP_ENV:-dev}
+      - APP_ENV=prod
       - ALLOWED_DOMAIN=${ALLOWED_DOMAIN:-}
     depends_on:
       - tyre-app-mysql
@@ -35,16 +33,16 @@ services:
   tyre-app-mysql:
     image: mysql:5.7
     platform: linux/amd64
-    container_name: tyre-app-mysql
+    container_name: tyre-app-mysql-prod
     ports:
-      - "3307:3306"
+      - "3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root_password}
       - MYSQL_DATABASE=${DB_NAME:-tyre_db}
       - MYSQL_USER=${DB_USER:-tyre_user}
       - MYSQL_PASSWORD=${DB_PASSWORD:-tyre_password}
     volumes:
-      - tyre-app-mysql-data:/var/lib/mysql
+      - tyre-app-mysql-data-prod:/var/lib/mysql
       - ./mysql-init:/docker-entrypoint-initdb.d
       - ./dumps:/dumps
     command: --sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION" --character-set-server=utf8 --collation-server=utf8_general_ci
@@ -57,9 +55,11 @@ services:
       retries: 5
 
 volumes:
-  tyre-app-mysql-data:
+  tyre-app-mysql-data-prod:
     driver: local
-  tyre-app-files:
+  tyre-app-files-prod:
+    driver: local
+  tyre-app-ssl-prod:
     driver: local
 
 networks:
