--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
-# По умолчанию используется dev окружение
-# Для продакшна используйте: docker-compose -f docker-compose.prod.yml
-# Подробнее: README-ENVIRONMENTS.md
+# Универсальный docker-compose.yml для dev и prod окружений
+# Окружение определяется через переменные окружения:
+# - APP_ENV=dev (по умолчанию) - порт 8080, MySQL порт 3307
+# - APP_ENV=prod - порты 80 и 443, MySQL порт 3306
 
 services:
   tyre-app-php:
@@ -9,9 +10,11 @@ services:
       dockerfile: Dockerfile
     container_name: tyre-app-php
     ports:
-      - "8080:80"
+      - "${HTTP_PORT:-8080}:80"
+      - "${HTTPS_PORT:-443}:443"
     volumes:
       - tyre-app-files:/var/www/html/app/webroot/files
+      - tyre-app-ssl:/etc/apache2/ssl
       - ./app/webroot/.htaccess:/var/www/html/app/webroot/.htaccess
       - ./app/webroot/phpmy/config.inc.php:/var/www/html/app/webroot/phpmy/config.inc.php
       - ./app/webroot/phpmy/.htaccess:/var/www/html/app/webroot/phpmy/.htaccess
@@ -37,7 +40,7 @@ services:
     platform: linux/amd64
     container_name: tyre-app-mysql
     ports:
-      - "3307:3306"
+      - "${MYSQL_PORT:-3307}:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root_password}
       - MYSQL_DATABASE=${DB_NAME:-tyre_db}
@@ -60,6 +63,8 @@ volumes:
   tyre-app-mysql-data:
     driver: local
   tyre-app-files:
+    driver: local
+  tyre-app-ssl:
     driver: local
 
 networks:
