--- a/env.example
+++ b/env.example
@@ -19,3 +19,14 @@ APP_ENV=dev
 # Example: ALLOWED_DOMAIN=example.com
 # В продакшне будет автоматически сгенерирован SSL сертификат и настроен редирект HTTP -> HTTPS
 ALLOWED_DOMAIN=
+
+# Docker Compose Configuration
+# Для dev (по умолчанию):
+HTTP_PORT=8080
+HTTPS_PORT=443
+MYSQL_PORT=3307
+
+# Для prod измените:
+# HTTP_PORT=80
+# HTTPS_PORT=443
+# MYSQL_PORT=3306
