--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       - tyre-app-mysql-data:/var/lib/mysql
       - ./mysql-init:/docker-entrypoint-initdb.d
       - ./dumps:/dumps
-    command: --sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION" --character-set-server=utf8 --collation-server=utf8_general_ci --innodb-buffer-pool-size=512M --max-connections=100 --query-cache-size=64M --query-cache-type=1 --query-cache-limit=2M --innodb-flush-log-at-trx-commit=2 --innodb-log-file-size=128M
+    command: --sql-mode="NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION" --character-set-server=utf8 --collation-server=utf8_general_ci --innodb-buffer-pool-size=512M --max-connections=100 --query-cache-size=64M --query-cache-type=1 --query-cache-limit=2M --innodb-flush-log-at-trx-commit=2 --innodb-log-file-size=128M
     networks:
       - tyre-app-network
     healthcheck:
