--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: tyre-app-php
+    restart: always
     ports:
       - "${HTTP_PORT:-8080}:80"
       - "${HTTPS_PORT:-443}:443"
@@ -40,6 +41,7 @@ services:
   tyre-app-redis:
     image: redis:5-alpine
     container_name: tyre-app-redis
+    restart: always
     ports:
       - "${REDIS_PORT:-6379}:6379"
     volumes:
@@ -57,6 +59,7 @@ services:
     image: mysql:5.7
     platform: linux/amd64
     container_name: tyre-app-mysql
+    restart: always
     ports:
       - "${MYSQL_PORT:-3307}:3306"
     environment:
