--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       - tyre-app-mysql-data:/var/lib/mysql
       - ./mysql-init:/docker-entrypoint-initdb.d
       - ./dumps:/dumps
-    command: --sql-mode="NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION" --character-set-server=utf8 --collation-server=utf8_general_ci --innodb-buffer-pool-size=1024M --max-connections=50 --query-cache-size=128M --query-cache-type=1 --query-cache-limit=2M --innodb-flush-log-at-trx-commit=2 --innodb-log-file-size=256M --innodb-thread-concurrency=0 --innodb-read-io-threads=4 --innodb-write-io-threads=4 --table-open-cache=4000 --thread-cache-size=50 --innodb-lock-wait-timeout=10 --innodb-flush-method=O_DIRECT --innodb-file-per-table=1 --innodb-buffer-pool-instances=4 --innodb-io-capacity=1000 --innodb-purge-threads=2
+    command: --sql-mode="NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION" --character-set-server=utf8 --collation-server=utf8_general_ci --innodb-buffer-pool-size=1024M --max-connections=50 --query-cache-size=128M --query-cache-type=1 --query-cache-limit=2M --innodb-flush-log-at-trx-commit=2 --innodb-log-file-size=256M --innodb-thread-concurrency=0 --innodb-read-io-threads=4 --innodb-write-io-threads=4 --table-open-cache=4000 --thread-cache-size=50 --innodb-lock-wait-timeout=10 --innodb-buffer-pool-instances=4 --innodb-io-capacity=2000 --innodb-purge-threads=2 --innodb-flush-method=O_DIRECT
     networks:
       - tyre-app-network
     healthcheck:
