--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -19,6 +19,11 @@
     RewriteCond %{HTTP_USER_AGENT} .*(harvest|extract|grab|miner|crawler|spider|bot|scraper).* [NC]
     RewriteRule .* - [F,L]
     
+    # Прямой доступ к статическим файлам (изображения, CSS, JS) - обход CakePHP для производительности
+    # Если файл существует, отдаем его напрямую
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteRule ^(img|css|js|files)/(.*)$ - [L]
+    
     # CakePHP routing rules
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
