--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -1,8 +1,18 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
     
+    # Прямой доступ к статическим файлам (изображения, CSS, JS) - обход CakePHP для производительности
+    # Если файл существует, отдаем его напрямую (приоритет 1 - проверяем первым для скорости)
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteRule ^(img|css|js|files)/(.*)$ - [L]
+    
+    # Исключаем админ-панель из проверок ботов для производительности импорта
+    RewriteCond %{REQUEST_URI} ^/admin [NC,OR]
+    RewriteCond %{REQUEST_URI} ^/app/webroot [NC]
+    RewriteRule .* - [L]
+    
     # ============================================
-    # Защита от ботов и rate limiting
+    # Защита от ботов и rate limiting (только для публичных страниц)
     # ============================================
     
     # Блокировка известных ботов и краулеров (кроме основных поисковых)
@@ -18,11 +28,6 @@
     RewriteCond %{HTTP_USER_AGENT} !(Googlebot|Yandex|YandexBot|YandexImages|YandexVideo|YandexMedia|YandexBlogs|YandexFavicons|YandexWebmaster|YandexPagechecker|YandexImageResizer|YandexMetrika|YandexDirect|YandexScreenshotBot|YandexAccessibilityBot|YandexMobileScreenShotBot|YandexCalendar|YandexSitelinks|YandexNews|YandexCatalog|YandexAntivirus|YandexMarket|YandexVertis|YandexForDomain|YandexSpravBot|YandexSearchShop|YandexMedianaBot|YandexOntoDB|YandexOntoDBAPI|YandexTurbo|YandexVerticals|YandexNotifier) [NC]
     RewriteCond %{HTTP_USER_AGENT} .*(harvest|extract|grab|miner|crawler|spider|bot|scraper).* [NC]
     RewriteRule .* - [F,L]
-    
-    # Прямой доступ к статическим файлам (изображения, CSS, JS) - обход CakePHP для производительности
-    # Если файл существует, отдаем его напрямую
-    RewriteCond %{REQUEST_FILENAME} -f
-    RewriteRule ^(img|css|js|files)/(.*)$ - [L]
     
     # CakePHP routing rules
     RewriteCond %{REQUEST_FILENAME} !-d
